changed photo picker

--- a/xcode/diary/diary/Base.lproj/Main.storyboard
+++ b/xcode/diary/diary/Base.lproj/Main.storyboard
@@ -82,16 +82,13 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                             </button>
-                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="aA6-3F-ytl">
-                                                <rect key="frame" x="20" y="595" width="285" height="29"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ecS-Ot-h90">
+                                                <rect key="frame" x="20" y="502" width="128" height="128"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <segments>
-                                                    <segment title="Happy"/>
-                                                    <segment title="Is ok"/>
-                                                    <segment title="Hm.."/>
-                                                    <segment title="Bad!"/>
-                                                </segments>
-                                            </segmentedControl>
+                                                <state key="normal" image="rhappy.png">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.7607843876" green="0.81568634510000004" blue="0.90980398650000005" alpha="1" colorSpace="deviceRGB"/>
                                     </view>
@@ -295,6 +292,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         </scene>
     </scenes>
     <resources>
+        <image name="rhappy.png" width="128" height="128"/>
         <image name="second" width="30" height="30"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
