--- a/xcode/diary/diary/Base.lproj/Main.storyboard
+++ b/xcode/diary/diary/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="J2D-sh-JEI">
-                                                <rect key="frame" x="20" y="680" width="285" height="162"/>
+                                                <rect key="frame" x="20" y="744" width="285" height="162"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.99215692280000001" green="0.99607849120000003" blue="0.99607849120000003" alpha="1" colorSpace="deviceRGB"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="410043467.46511298">
@@ -129,6 +129,13 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                                                 <rect key="frame" x="20" y="435" width="285" height="210"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="201-y0-v4j">
+                                                <rect key="frame" x="27" y="653" width="128" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Image wählen...">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0039215688593685627" green="0.62352943420410156" blue="1" alpha="0.0" colorSpace="deviceRGB"/>
                                     </view>
@@ -152,11 +159,12 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                         <outlet property="rootview" destination="2VE-Yg-loa" id="bPT-ac-ef6"/>
                         <outlet property="sad" destination="nsQ-Ph-lpL" id="Bqu-xM-A9o"/>
                         <outlet property="scroll" destination="Wem-oN-R53" id="I8a-9P-vi3"/>
-                        <outlet property="selectImage" destination="b1i-vV-6Yr" id="6RI-2D-gmJ"/>
+                        <outlet property="selectTheImage" destination="201-y0-v4j" id="v89-Dm-YL7"/>
                         <outlet property="subView" destination="TJJ-MA-QZf" id="19g-NM-URN"/>
                         <outlet property="superHappy" destination="ecS-Ot-h90" id="1Qu-SF-045"/>
                         <outlet property="superSad" destination="3qS-yv-s3v" id="Ift-Hj-bjC"/>
                         <outlet property="textInput" destination="NHo-xI-JnM" id="Ylm-zZ-Y5N"/>
+                        <outlet property="theImage" destination="b1i-vV-6Yr" id="gOP-fA-gGF"/>
                         <outlet property="titleInput" destination="xaI-AJ-QmL" id="PFM-9X-mET"/>
                     </connections>
                 </viewController>
